- UMD 8730 by PHF (video, unused bits in STF color registers)
- IKBD no jitter by Nyh (acia/video, use a VBL of 160240 cycles)

Fixed games :
- Batman The Movie (cpu, exception stack)
- Chart Attack Compilation (cpu, prefetch)
- Darkman (cpu, prefetch)
- Dragon Flight (cpu, illegal instruction)
- International 3D Tennis (cpu, prefetch)
- Leavin' Teramis loader text (video address at $ffe100)
- Lethal Xcess (mfp, top border not removed sometimes)
- Maze (by Martin Dennett & John Parker)
- Parasol Stars (cpu, prefetch)
- Reeking Rubber (by Nature), Falcon game
- Titan (cpu, prefetch)
- To Be On Top (cpu, memory access, ikbd, protection)
- Warp (ikbd, interrupt used for decoding sectors)
- Xenon 2 (cpu, prefetch)


 Version 1.7.0 (2013-06-24):
 ---------------------------

Emulation:
- TT video emulation :
  - Extend the ST palette registers from 9bit to 12bit for ST modes
  - Duochrome mode instead of monochrome for ST High
  - Implementation of SampleHold in TT Hypermono video mode
- Sound changes :
  - Better model of the YM2149 noise generation (no noticeable audible impact)
  - Slightly better volume table (measured by Paulo Simoes on a real ST)
- CPU changes :
  - Added experimental MMU emulation for the 68030 mode
  - Handle the IACK cycles during an exception for HBL/VBL
- ACIA/IKBD changes :
  - Full implementation of the MC6850 ACIA, giving much more robust
    IKBD emulation
  - Better timings for all IKBD commands (measured on a real STF)
  - Clock is handled internally in IKBD, host date/time is used
    only to initialize RTC at boot.  I.e. pausing emulation doesn't
    cause time skips when unpausing
  - Fix slow mouse when absolute mode is used with scale values
- MFP changes :
  - Fixed priority errors when simultaneous interrupts happened
  - MFP's IRQ should be delayed by 4 cycles before reaching the CPU
  - MFP's IRQ signal was not correctly updated in some cases
  - Handle the IACK cycles between CPU and MFP during an exception
- FDC changes :