@@ -302,6 +302,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><a href="http://www.edv-rudolf.de/lethal-xcess/download.htm">Lethal Xcess Beta</a></td>
+      <td>1.8</td>
+      <td>The STX version requires Hatari &ge; 1.8 to handle the protection</td>
+    </tr>
+    <tr>
       <td>Lethal Xcess</td>
       <td>1.0</td>
       <td>Uses sync-scrolling in ST mode and STE HW scrolling in STE mode.</td>
